<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/Theme.PrismPriceCalculator.AppBarOverlay"
            android:layout_alignParentTop="true">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/Theme.PrismPriceCalculator.PopupOverlay" />

        </com.google.android.material.appbar.AppBarLayout>
        <ProgressBar
            style="?android:attr/progressBarStyleHorizontal"
            android:id="@+id/loader"
            android:layout_below="@id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_marginTop="-6dp"
            android:layout_height="wrap_content"
            android:indeterminate="true"
            android:indeterminateTint="@color/blue3"
            android:visibility="invisible"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarThumbVertical="@null"
            android:background="#F6F7FF"
            android:fillViewport="true"
            android:layout_below="@id/loader">

            <LinearLayout
                android:id="@+id/loginFormLinear"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="8dp"
                android:paddingEnd="8dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/create_your_account"
                    android:textColor="@color/textColor3"
                    android:textSize="26sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:id="@+id/signUpLabel"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:padding="2dp"
                        android:text="If you already have an account, please"
                        android:textColor="@color/textColor2" />

                    <TextView
                        android:id="@+id/btnSignIn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingStart="8dp"
                        android:paddingTop="2dp"
                        android:paddingEnd="8dp"
                        android:paddingBottom="2dp"
                        android:text="@string/sign_in"
                        android:textAllCaps="false"
                        android:textColor="@color/themeColor"
                        android:textSize="16sp" />

                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="10dp"
                    android:hint="First Name"
                    android:textColorHint="@color/gray5"
                    android:windowSoftInputMode="adjustResize"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/edittext_box_stroke_color"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/gray5"
                    app:errorTextColor="@color/red1"
                    app:hintTextColor="@color/themeColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="yes"
                        android:inputType="text"
                        android:textColor="@color/textColor3" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="10dp"
                    android:hint="Last Name"
                    android:textColorHint="@color/gray5"
                    android:windowSoftInputMode="adjustResize"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/edittext_box_stroke_color"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/gray5"
                    app:errorTextColor="@color/red1"
                    app:hintTextColor="@color/themeColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="yes"
                        android:inputType="text"
                        android:textColor="@color/textColor3" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="10dp"
                    android:hint="Email"
                    android:textColorHint="@color/gray5"
                    android:windowSoftInputMode="adjustResize"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/edittext_box_stroke_color"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/gray5"
                    app:errorTextColor="@color/red1"
                    app:hintTextColor="@color/themeColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="yes"
                        android:inputType="text"
                        android:textColor="@color/textColor3" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="10dp"
                    android:hint="Company Name"
                    android:textColorHint="@color/gray5"
                    android:windowSoftInputMode="adjustResize"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/edittext_box_stroke_color"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/gray5"
                    app:errorTextColor="@color/red1"
                    app:hintTextColor="@color/themeColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="yes"
                        android:inputType="text"
                        android:textColor="@color/textColor3" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="10dp"
                    android:hint="Mobile Number"
                    android:textColorHint="@color/gray5"
                    android:windowSoftInputMode="adjustResize"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/edittext_box_stroke_color"
                    app:endIconMode="clear_text"
                    app:endIconTint="@color/gray5"
                    app:errorTextColor="@color/red1"
                    app:hintTextColor="@color/themeColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="yes"
                        android:inputType="phone"
                        android:textColor="@color/textColor3" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/gray5"
                    android:windowSoftInputMode="adjustResize"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/edittext_box_stroke_color"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/gray5"
                    app:errorTextColor="@color/red1"
                    app:hintTextColor="@color/themeColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionNext"
                        android:importantForAutofill="yes"
                        android:inputType="textPassword"
                        android:textColor="@color/textColor3" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/password"
                    android:textColorHint="@color/gray5"
                    android:windowSoftInputMode="adjustResize"
                    app:boxCornerRadiusBottomEnd="5dp"
                    app:boxCornerRadiusBottomStart="5dp"
                    app:boxCornerRadiusTopEnd="5dp"
                    app:boxCornerRadiusTopStart="5dp"
                    app:boxStrokeColor="@color/edittext_box_stroke_color"
                    app:endIconMode="password_toggle"
                    app:endIconTint="@color/gray5"
                    app:errorTextColor="@color/red1"
                    app:hintTextColor="@color/themeColor">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/reTypePassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:imeOptions="actionDone"
                        android:importantForAutofill="yes"
                        android:inputType="textPassword"
                        android:textColor="@color/textColor3" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btnSignUp"
                    style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="32dp"
                    android:backgroundTint="@color/themeColor"
                    android:enabled="false"
                    android:text="@string/sign_up"
                    android:textAllCaps="false"
                    android:textColor="@color/button_text_state_colors"
                    android:textSize="16sp"
                    android:windowSoftInputMode="adjustResize"
                    app:cornerRadius="5dp"
                    app:rippleColor="@color/chip_ripple_color" />
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>
</layout>